native/crates/specular-interact/tests/snapshots/comment_drafts__annotating_one_selected_page_names_it_as_the_target.snap
---
source: crates/specular-interact/tests/comment_drafts.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"p1","type":"link","x":100,"y":100,"width":400,"height":300,"url":"https://example.com/p1"}
  {"id":"p2","type":"link","x":700,"y":100,"width":400,"height":300,"url":"https://example.com/p2"}
edges:
specular: {"entityOrder":["p1","p2"]}
annotations:
  {"id":"e220a8397b1dcdaf","anchor":{"type":"region","canvasRect":{"x":100,"y":100,"width":400,"height":300}},"author":"user","text":"tighten this","status":"pending","replies":[],"createdAt":"1970-01-02T00:00:00.000Z","metadata":{"selectionEntityIds":["p1"],"selectionTarget":{"entityId":"p1","kind":"page","url":"https://example.com/p1"},"threadId":"thread_6e789e6aa1b965f4"}}
