native/crates/specular-interact/tests/snapshots/comment_drafts__annotating_two_selected_pages_names_no_target.snap
---
source: crates/specular-interact/tests/comment_drafts.rs
expression: app.doc_snapshot()
---
nodes:
  {"id":"p1","type":"link","x":100,"y":100,"width":400,"height":300,"url":"https://example.com/p1"}
  {"id":"p2","type":"link","x":700,"y":100,"width":400,"height":300,"url":"https://example.com/p2"}
edges:
specular: {"entityOrder":["p1","p2"]}
annotations:
  {"id":"e220a8397b1dcdaf","anchor":{"type":"region","canvasRect":{"x":100,"y":100,"width":1000,"height":300}},"author":"user","text":"align these","status":"pending","replies":[],"createdAt":"1970-01-02T00:00:00.000Z","metadata":{"selectionEntityIds":["p2","p1"]}}
